# membase-4-claude

./: .gitignore  LICENSE  MEMBASE-4-CLAUDE.md  MEMBASE-README.md  QUICKSTART.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: worktree-clean.yml
cli/: __init__.py  membase.py
docs/: 00-overview.md  bootstrap-procedure.md  managed-files.md  operating-model.md  upstream-upkeep.md  versioning-policy.md
manifests/: membase.project.schema.json
reference/: README.md  app.py  assertions.py  db.py  seed.py  test_reference.py
reference/agents/: code-reviewer.md  security-analyzer.md
reference/guardrails/: check_assertion_ratchet.py  check_test_deletion.py  generate_assertion_baseline.py  pre-commit
reference/hooks/: SCHEDULE.md  assertion-check.py  credential-scan.py  destructive-gate.py  scheduler.py  settings.local.json  spec-classifier.py
reference/skills/session-wrap/: SKILL.md
reference/static/: style.css
reference/templates/: assertions.html  base.html  dashboard.html  history.html  op_detail.html  ops.html  spec_detail.html  specs.html
templates/: README.md
templates/root/: README.md
templates/starter-specs/: README.md
templates/starter-tests/: README.md
tests/: test_membase_cli.py
